--- a/source/index.html
+++ b/source/index.html
@@ -4,17 +4,29 @@
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <title>Page Title</title>
-        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+        <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+        <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@fortawesome/fontawesome-free@6.6.0/css/fontawesome.min.css" integrity="sha256-XfA0ppGOANs88Ds+9FqVLy3xIGzT/25K/VLmRRxE9ow=" crossorigin="anonymous">
         <link rel="stylesheet" href="/css/styles.css">
     </head>
     <body>
-        <div class="text-center">
-            <img src="/img/logo.webp" alt="Logo">
-            <h1>Simple Heading Text</h1>
-            <p>This is all I have to say!</p>
-        </div>
+        <section class="py-5 text-center container">
+             <div class="row py-lg-5">
+                <div class="col-lg-6 col-md-8 mx-auto">
+                    <img src="/img/logo.webp" alt="Logo">
+                    <h1 class="fw-light">Simple Heading Text</h1>
+                    <hr>
+                    <p class="lead text-body-secondary">This is all I have to say!</p>
+
+                    <p>
+                        <a href="https://example.com" class="btn btn-primary my-2">Button 1 <i class="fa-solid fa-pen"></i></a>
+                        <a href="https://example.com" class="btn btn-secondary my-2">Button 2 <i class="fa-solid fa-pen"></i></a>
+                    </p>
+                </div>
+            </div>
+        </section>
         
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
+        <script src="https://cdn.jsdelivr.net/npm/@fortawesome/fontawesome-free@6.6.0/js/all.min.js" integrity="sha256-qq1ob4lpAizCQs1tkv5gttMXUlgpiHyvG3JcCIktRvs=" crossorigin="anonymous"></script>
         <script src="/js/main.js"></script>
     </body>
 </html>
