minor formating change

--- a/source/index.html
+++ b/source/index.html
@@ -25,12 +25,12 @@
                     <div class="collapse navbar-collapse" id="navbarCollapse">
                         <ul class="navbar-nav me-auto mb-2 mb-md-0">
                             <li class="nav-item">
-                                <a class="nav-link active" aria-current="page" href="#">
+                                <a href="#" class="nav-link active" aria-current="page">
                                     Properties
                                 </a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link" href="#">
+                                <a href="#" class="nav-link">
                                     About
                                 </a>
                             </li>
@@ -54,8 +54,12 @@
                     <p class="lead text-body-secondary">This is all I have to say!</p>
 
                     <p>
-                        <a href="https://example.com" class="btn btn-primary my-2">Button 1 <i class="fa-solid fa-pen"></i></a>
-                        <a href="https://example.com" class="btn btn-secondary my-2">Button 2 <i class="fa-solid fa-pen"></i></a>
+                        <a href="https://example.com" class="btn btn-primary my-2">
+                            Button 1 <i class="fa-solid fa-pen"></i>
+                        </a>
+                        <a href="https://example.com" class="btn btn-secondary my-2">
+                            Button 2 <i class="fa-solid fa-pen"></i>
+                        </a>
                     </p>
                 </div>
             </div>
