made javascript functions for initial fill and refresh available through HTML buttons

--- a/source/index.html
+++ b/source/index.html
@@ -62,15 +62,15 @@
                  style="width:300px;height:150px;">
             <h1 class="fw-light">Simple Heading Text</h1>
             <hr>
-            <p class="lead text-body-secondary">This is all I have to say!</p>
+            <p class="lead text-body-secondary">Some intro words</p>
 
             <p>
-              <a href="https://example.com" class="btn btn-primary my-2">
-                Button 1 <i class="fa-solid fa-pen"></i>
-              </a>
-              <a href="https://example.com" class="btn btn-secondary my-2">
-                Button 2 <i class="fa-solid fa-pen"></i>
-              </a>
+              <button type="button" class="btn btn-primary" onclick="fillGallery()">
+                Fill Gallery&emsp;<i class="fa-solid fa-arrow-down"></i>
+              </button>
+              <button type="button" class="btn btn-primary" onclick="refreshGallery()">
+                Refresh Gallery&emsp;<i class="fa-solid fa-arrow-rotate-left"></i>
+              </button>
             </p>
           </div>
         </div>
