--- a/source/index.html
+++ b/source/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Page Title</title>
+    <title>Company Name - Main Page</title>
     <link rel="icon" type="image/png" sizes="16x16"
           href="/icons/favicon-16x16.png">
     <link rel="stylesheet"
@@ -21,7 +21,7 @@
     <header>
       <nav class="navbar navbar-expand-md navbar-dark fixed-top bg-dark">
         <div class="container-fluid">
-          <a class="navbar-brand" href="#">Company Name</a>
+          <a class="navbar-brand" href="/">Company Name</a>
           <button class="navbar-toggler" type="button"
                   data-bs-toggle="collapse"
                   data-bs-target="#navbarCollapse"
@@ -33,12 +33,12 @@
           <div class="collapse navbar-collapse" id="navbarCollapse">
             <ul class="navbar-nav me-auto mb-2 mb-md-0">
               <li class="nav-item">
-                <a href="#" class="nav-link active" aria-current="page">
+                <a href="/properties" class="nav-link active" aria-current="page">
                   Properties
                 </a>
               </li>
               <li class="nav-item">
-                <a href="#" class="nav-link">
+                <a href="/about" class="nav-link">
                   About
                 </a>
               </li>
