display a visible remark about incomplete function

--- a/source/index.html
+++ b/source/index.html
@@ -71,6 +71,7 @@
               <button type="button" class="btn btn-primary" onclick="refreshGallery()">
                 Refresh Gallery&emsp;<i class="fa-solid fa-arrow-rotate-left"></i>
               </button>
+              <br>(As of now, refresh just empties)
             </p>
           </div>
         </div>
